--- a/Bracez/ui/editor/EditorWindow.xib
+++ b/Bracez/ui/editor/EditorWindow.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="NSWindowController">
+        <customObject id="-2" userLabel="File's Owner" customClass="JsonDocument">
             <connections>
                 <outlet property="window" destination="3" id="258"/>
             </connections>
@@ -165,7 +165,7 @@
                                             </tabViewItem>
                                         </tabViewItems>
                                     </tabView>
-                                    <customView autoresizesSubviews="NO" misplaced="YES" id="584">
+                                    <customView autoresizesSubviews="NO" id="584">
                                         <rect key="frame" x="116" y="0.0" width="265" height="391"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <subviews>
@@ -203,7 +203,7 @@
                                         <constraints>
                                             <constraint firstItem="184" firstAttribute="top" secondItem="584" secondAttribute="top" id="2I8-dg-mLu"/>
                                             <constraint firstAttribute="bottom" secondItem="184" secondAttribute="bottom" id="2ux-mE-a6a"/>
-                                            <constraint firstAttribute="trailing" secondItem="184" secondAttribute="trailing" id="Ezl-dS-mf7"/>
+                                            <constraint firstAttribute="trailing" secondItem="184" secondAttribute="trailing" constant="-146" id="Ezl-dS-mf7"/>
                                             <constraint firstItem="184" firstAttribute="leading" secondItem="584" secondAttribute="leading" id="dOP-Ms-6OC"/>
                                         </constraints>
                                     </customView>
@@ -988,7 +988,7 @@
         <customObject id="6" customClass="NodeSelectionController">
             <connections>
                 <outlet property="coordView" destination="159" id="213"/>
-                <outlet property="docController" destination="10" id="254"/>
+                <outlet property="document" destination="-2" id="h2z-E4-vQ4"/>
                 <outlet property="pathView" destination="263" id="264"/>
                 <outlet property="textView" destination="187" id="216"/>
                 <outlet property="treeController" destination="12" id="229"/>
