--- a/Bracez/ui/editor/EditorWindow.xib
+++ b/Bracez/ui/editor/EditorWindow.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -83,7 +83,7 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="214" height="392"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                         <size key="intercellSpacing" width="3" height="2"/>
-                                                                        <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                         <tableViewGridLines key="gridStyleMask" vertical="YES"/>
                                                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                                         <tableColumns>
@@ -131,7 +131,7 @@
                                                                         </connections>
                                                                     </outlineView>
                                                                 </subviews>
-                                                                <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <nil key="backgroundColor"/>
                                                             </clipView>
                                                             <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="193">
                                                                 <rect key="frame" x="0.0" y="376" width="155" height="16"/>
@@ -181,7 +181,7 @@
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                            <size key="minSize" width="166" height="391"/>
+                                                            <size key="minSize" width="0.0" height="391"/>
                                                             <size key="maxSize" width="762" height="10000000"/>
                                                             <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                             <connections>
@@ -315,7 +315,7 @@
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                         <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="UTc-dM-0dl">
                                                                             <rect key="frame" x="0.0" y="0.0" width="261" height="360"/>
-                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                            <autoresizingMask key="autoresizingMask"/>
                                                                             <subviews>
                                                                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="40" viewBased="YES" id="637" userLabel="BookmarksView">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="261" height="360"/>
@@ -674,7 +674,7 @@
                                                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="187"/>
                                                                                         <clipView key="contentView" drawsBackground="NO" id="7L0-FR-TwL">
                                                                                             <rect key="frame" x="0.0" y="0.0" width="240" height="187"/>
-                                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                                            <autoresizingMask key="autoresizingMask"/>
                                                                                             <subviews>
                                                                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="40" viewBased="YES" id="S9U-TC-mCd">
                                                                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="187"/>
@@ -913,7 +913,7 @@
                     <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="210"/>
                     <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="209"/>
                     <toolbarItem implicitItemIdentifier="NSToolbarCustomizeToolbarItem" id="208"/>
-                    <toolbarItem implicitItemIdentifier="1C1A6AF8-AF02-4D6D-B620-55CE9F7DD55E" label="Delete" paletteLabel="Delete" image="NSStopProgressTemplate" sizingBehavior="auto" id="1hl-u1-DMO">
+                    <toolbarItem implicitItemIdentifier="1C1A6AF8-AF02-4D6D-B620-55CE9F7DD55E" label="Delete" paletteLabel="Delete" image="NSStopProgressTemplate" title="Textured Rounded" sizingBehavior="auto" id="1hl-u1-DMO">
                         <nil key="toolTip"/>
                         <button key="view" verticalHuggingPriority="750" id="WBj-4P-rfo">
                             <rect key="frame" x="8" y="14" width="26" height="23"/>
@@ -1074,9 +1074,9 @@
             </items>
             <point key="canvasLocation" x="-337" y="-485"/>
         </menu>
-        <menu id="q1o-Md-fYx">
+        <menu title="VisualPaneSelectorMenu" id="q1o-Md-fYx">
             <items>
-                <menuItem title="Tree View" image="TreeView" id="Eod-QR-r7o">
+                <menuItem title="Tree View" image="list.bullet.indent" catalog="system" id="Eod-QR-r7o">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <binding destination="4" name="value" keyPath="selection.showTree" id="J6r-z9-jDZ"/>
@@ -1089,7 +1089,7 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="wqX-xr-F56"/>
-                <menuItem title="Text Editor" image="TextView" id="rRC-NC-Ibd">
+                <menuItem title="Text Editor" image="square.and.pencil" catalog="system" id="rRC-NC-Ibd">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <binding destination="4" name="value" keyPath="selection.showTextEditor" id="o4c-9p-Bwm"/>
@@ -1113,13 +1113,13 @@
         <image name="NSPreferencesGeneral" width="32" height="32"/>
         <image name="NSRevealFreestandingTemplate" width="15" height="15"/>
         <image name="NSStopProgressTemplate" width="14" height="13"/>
-        <image name="TextView" width="20" height="15"/>
         <image name="ToolbarBookmarksTemplate" width="16" height="16"/>
-        <image name="TreeView" width="19" height="15"/>
         <image name="exclamationmark.triangle" catalog="system" width="17" height="15"/>
+        <image name="list.bullet.indent" catalog="system" width="19" height="12"/>
         <image name="mappin.and.ellipse" catalog="system" width="15" height="16"/>
         <image name="rectangle.split.1x2" catalog="system" width="18" height="14"/>
         <image name="sidebar.left" catalog="system" width="15" height="12"/>
         <image name="sidebar.right" catalog="system" width="23" height="17"/>
+        <image name="square.and.pencil" catalog="system" width="17" height="15"/>
     </resources>
 </document>
